--- a/mouse hover animate/css/style.css
+++ b/mouse hover animate/css/style.css
@@ -3,3 +3,72 @@
 .box:hover .box-img {position: absolute;-webkit-transform: scale(1.1);opacity: .6;}
 .box .box-caption {color: yellow;padding: 0;margin: 0;backface-visibility: hidden;transition: all .4s ease-in-out;overflow: hidden;}
 
+.box .box-caption::before,.box .box-caption::after {
+    position: absolute;
+    content: '';
+    opacity: 0;
+    -webkit-transition: opacity .4s,-webkit-transform .4s;
+}
+.box .box-caption::before {
+    top: 8%;right: 10%;bottom: 8%;left: 10%;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: scale(0,1);
+    -webkit-transform-origin: 0 0;
+}
+.box .box-caption::after {
+    top: 8%;right: 10%;bottom: 8%;left: 10%;
+    border-right: 1px solid #fff;
+    border-left: 1px solid #fff;
+    -webkit-transform:scale(1,0);
+    -webkit-transform-origin: 100% 0;
+}
+.box .box-caption,.box .box-caption-a {
+    position: absolute;
+    top: 0;left: 0;width: 100%;height: 100%;
+    -webkit-transition: all .4s ease-in-out;
+    overflow: hidden;;z-index: 1000;
+}
+.box .box-caption-h {
+    font-size: 1.3em;font-weight: 700;
+    text-align: center;
+    width: 80%;position: absolute;
+    top: 20%;left: 10%;
+    -webkit-transition: all .5s ease-in-out;
+    overflow: hidden;opacity: 1;
+}
+.box .box-caption-p {
+    font-size: 1em;
+    text-align: center;
+    width: 80%;
+    position: absolute;
+    top: 60%;
+    left:10%;
+    -webkit-transition: all .4s ease-in-out;
+    overflow: hidden; opacity: 0;
+}
+.box:hover .box-caption-p {
+    top: 45%;
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
